--- a/src/base/layout.css
+++ b/src/base/layout.css
@@ -4,5 +4,5 @@ body {
     color: white;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow: hidden;
+    overflow-x: hidden;
 }
